- Uses Windows API's to go to exact value name in regedit instead of just setting LastKey
- Scans Add Remove Programs Cache for old programs
- Changed contact email to nick@littleapps.co.cc
- Updated Crash Reporter, no longer sends name and email, also can restart program
- Fixed bug when optimizer closes
- Shows total size difference between registry hives in optimizer, also fixed a minor bug
- Fixed bug causing restore points to not be created

+ Version 1.0 Released

- Scans HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer\FileExts for unused file extensions
- Cleaned up COMObjects.cs
- No longer collects Machine and username in crash reporter
- Changed the look of update dialog, also added date to xml file
- Uses CollectionBase class to store bad registry keys in array
- Uses shlwapi.dll instead to parse drive type and added check for removable media in Utils.DirExists()
- Cleaned up Utils.cs
- Checks if file exists before extracting arguments in startup manager
- Added check for srclient.dll before creating restore points
- Scan dialog uses Xp Progress Bar
- Added TreeListView that performs combines the treeview and listview into one and also added project for controls
- BadRegistryKey class uses ListViewItem as base class
- Moved xmlRegistry static functions to Utils class
- Scanner classes are now static to make thread calling faster
- Optimizer wont compact registry if difference is more than 90%
- Hive class implements IDisposable interface
- Implemented TreeViewAdv into Startup Manager and removed vista message when running a program
- ExtractFileLocation() is private and integrated into ExtractArguments()
- Added images to startup manager tree view
- Fixed bug in uninstall manager that causes not to update listview properly
- Startup and uninstall manager can no longer be minimized and maximized
- Buttons are bigger in Uninstall manger and it is not started maximized